# loom

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  docker-compose.yml  loom-graph.html  mcp-manifest.json  pyproject.toml  pytest.ini  smithery.json
.claude/: settings.json  skills.md
.claude-plugin/: marketplace.json
.claude/commands/: add-tool.md  blast-radius.md  dry-pass.md  find-skill.md  fix-and-test.md  production-gate.md  review-all.md  smoke-test.md  test-mcp.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  loom-full-index.yml  loom-index.yml  publish-pypi.yml
docs/: ACCURACY_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE.md  MANUAL_INTERVENTION_ERRORS.md  MCP.md  TECHNICAL_CAPABILITIES.md  USAGE.md  embedding-speed-research.md
docs/skills/: loom-workflow.md
docs/superpowers/plans/: 2026-04-17-loom-revamp.md  2026-04-18-embedding-speed.md  2026-04-21-loom-v0.2-simplification.md
docs/superpowers/specs/: 2026-03-18-loom-demo-design.md  2026-03-18-loom-demo-onboarding.md  2026-03-18-loom-demo-traceability.md  2026-04-17-loom-revamp-design.md  2026-04-18-embedding-speed-design.md  2026-04-21-loom-v0.2-simplification-design.md
hooks/: session-start.sh
plugins/loom-plugin/: CLAUDE.md  README.md
plugins/loom-plugin/.claude-plugin/: marketplace.json  plugin.json
plugins/loom-plugin/agents/: analyst.md  navigator.md  summarizer.md
plugins/loom-plugin/commands/: loom-analyze.md  loom-blast.md  loom-context.md  loom-delta.md  loom-savings.md  loom-summaries.md  loom-topology.md
plugins/loom-plugin/docs/adrs/: 0001-loom-plugin-contract.md
plugins/loom-plugin/hooks/: hooks.json
plugins/loom-plugin/scripts/: smoke.sh
plugins/loom-plugin/skills/document-code/: SKILL.md
plugins/loom-plugin/skills/explore-code/: SKILL.md
plugins/loom-plugin/skills/impact-analysis/: SKILL.md
plugins/loom-plugin/skills/loom/: SKILL.md  skill-aider.md  skill-codex.md  skill-copilot.md  skill-cursor.md  skill-windsurf.md
plugins/loom-plugin/skills/onboard/: SKILL.md
scripts/: check_deps.py  check_env.py  diagnose_vector_query.py
src/loom/: __init__.py  cli.py  config.py  devtools.py  errors.py  tree_sitter_utils.py
src/loom/analysis/: communities.py  coupling.py  dead_code.py  graph_insights.py
src/loom/analysis/code/: calls.py  calls_java.py  calls_ts.py  communities.py  coupling.py  extractor.py  noise_filter.py  parser.py  summarizer.py
src/loom/cli/: __init__.py  analysis.py  export.py  formatters.py  graph.py  ingest.py  install.py
src/loom/cli/plugins/: __init__.py  _builtins.py
src/loom/core/: __init__.py  content_hash.py  context.py  db.py  edge.py  edge_model.py  enums.py  gateway.py  graph.py  model.py  node.py  node_model.py  protocols.py  schema.sql  schema_locks.py  symbol_index.py  types.py  validation.py
src/loom/core/falkor/: __init__.py  cypher.py  edge_type_adapter.py  gateway.py  mappers.py  queries.py  repositories.py  schema.py
src/loom/data/: loom-skill.md
src/loom/drift/: detector.py
src/loom/embed/: embedder.py
src/loom/graph/: __init__.py  db.py  db_pool.py  projects.py  schema.sql
src/loom/graph/models/: __init__.py  (+3 more)
src/loom/indexer/: __init__.py  complexity.py  edge_describer.py  extractor.py  graph_tagger.py  incremental.py  language_notes.py  pipeline.py  registry.py  tagger.py  test_linker.py  utils.py  walker.py
src/loom/ingest/: differ.py  errors.py  git.py  git_linker.py  git_miner.py  helpers.py  incremental.py  pipeline.py  result.py  utils.py
src/loom/intelligence/: __init__.py  architecture.py  cohesion.py  communities.py  coupling.py  dead_code.py  suggested_questions.py  surprising_connections.py
src/loom/linker/: _text_utils.py  embed_match.py  linker.py  llm_match.py  name_match.py  prompts.py  reranker.py  ticket_linker.py
src/loom/llm/: client.py
src/loom/mcp/: enums.py  run.py  server.py
src/loom/query/: blast_radius.py  context.py  delta.py  node_lookup.py  primer.py  search.py  traceability.py  traversal.py
src/loom/search/: searcher.py
src/loom/server/: __init__.py  app.py  cache.py  run.py  validation.py
src/loom/store/: edges.py  node_visits.py  nodes.py  savings.py  sessions.py
src/loom/templates/: graph.html
src/loom/watch/: watcher.py
tests/: test_node.py
tests/e2e/: test_mcp_e2e.py  test_multi_project_e2e.py  test_pipeline_v062.py  test_startup.py
tests/fixtures/: sample_graph.py
tests/fixtures/python_flask_app/: .env.example  app.py  models.py  reflection_example.py  utils.py
tests/fixtures/sample_repo/: auth.py  flask_app.py
tests/fixtures/vue_tsx_app/: .env.example
tests/integration/: test_communities.py  test_edge_type_storage.py  test_gateway_retry.py  test_graph_crud_and_neighbors.py  test_graph_e2e.py  test_graph_upsert_metadata_edges.py  test_incremental.py  test_java_springboot_e2e.py  test_markup_config_e2e.py  test_python_flask_e2e.py  test_reflection_dynamic_e2e.py  test_schema_init.py  test_search_query_e2e.py  test_semantic_linker_rerank_e2e.py  test_vue_tsx_e2e.py
tests/unit/: test_architecture.py  test_base_parser.py  test_blast_radius_depth.py  test_brandes.py  test_cached_embedder.py  test_call_context_capture.py  test_calls.py  test_calls_ts_java.py  test_change_report.py  test_clear_by_tags.py  test_cli_accuracy.py  test_cli_analyze.py  test_cli_calls.py  test_cli_entrypoints.py  test_cli_help_query.py  test_cli_query.py  test_cli_sync.py  test_cli_trace.py  test_communities.py  test_complexity.py  test_confluence_connector.py  test_content_hash.py  test_context_enrichment.py  test_context_enrichment_v6.py  test_context_packet.py  test_core_enums.py  test_coupling.py  test_cypher_builders.py  test_db.py  test_db_context.py  test_db_pool.py  test_differ.py  test_docs_markdown.py  test_drift_detector.py  test_edge.py  test_edge_describer.py  test_edge_more_cases.py  test_edge_origin_mapper.py  test_edge_repository.py  test_edge_type_adapter.py  (+92 more)
(+93 files in other folders)
