[project]
name = "loom-tool"
version = "0.1.0"
description = "A code intelligence platform that turns repositories, docs, and tickets into one searchable graph."
readme = "README.md"
authors = [
    { name = "Devashish", email = "jadhavom24@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "falkordb>=1.6.0",
    "fastembed>=0.7.4",
    "fastmcp>=3.0.2",
    "gitpython>=3.1.46",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "litellm>=1.82.0",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sentence-transformers>=3.0.1",
    "tree-sitter>=0.25.2",
    "typer>=0.24.1",
    "watchfiles>=1.1.1",
    "uvloop ; sys_platform != 'win32'",
    "winloop>=0.5.0; platform_system == 'Windows'",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-ruby>=0.23.1",
    "pathspec>=1.0.4",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
loom = "loom.cli:main"
loom-test = "loom.devtools:run_tests"
loom-check-deps = "loom.devtools:check_deps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]
sources = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["arg-type", "assignment", "attr-defined", "misc", "no-redef", "operator", "prop-decorator", "var-annotated"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow-running",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DTZ", "T10", "SIM", "ARG", "PTH"]
ignore = [
  "E501",
  "B006",
  "B008",
  "B904",
  "ARG001",
  "ARG002",
  "ARG003",
  "ARG004",
  "ARG005",
  "PTH211",
  "SIM102",
  "SIM103",
  "SIM105",
  "SIM110",
  "UP022",
  "UP036",
  "UP042",
  "UP046",
  "DTZ003",
  "W293",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
