[project]
name = "loom-tool"
version = "0.3.5"
description = "A code intelligence platform that turns repositories, docs, and tickets into one searchable graph."
readme = "README.md"
authors = [
    { name = "Devashish", email = "jadhavom24@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["code-intelligence", "mcp", "agent", "symbol-index", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.0.2",
    "gitpython>=3.1.46",
    "networkx>=3.3",
    "pathspec>=1.0.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "typer>=0.24.1",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/devashishjadav/loom"
Issues = "https://github.com/devashishjadav/loom/issues"

[project.scripts]
loom = "loom.cli:main"
loom-mcp = "loom.mcp.run:run_stdio"
loom-test = "loom.devtools:run_tests"
loom-check-deps = "loom.devtools:check_deps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]
sources = ["src"]



[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["arg-type", "assignment", "attr-defined", "misc", "no-redef", "operator", "prop-decorator", "var-annotated"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow-running",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DTZ", "T10", "SIM", "ARG", "PTH"]
ignore = [
    "B008",   # typer.Option/Argument in defaults is the standard typer pattern
    "ARG001", # unused function arg — typer callbacks and pytest fixtures require positional args
    "ARG002", # unused method arg — overrides and callbacks
    "ARG003", # unused class method arg
    "ARG004", # unused static method arg
    "UP036",  # version-block check false-positive on event-loop shim
]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["E402", "E501", "F401", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
